Quorum3/Library/Tests/Expressions/Fail/MainNotCapitalized.quorum
class Main 
    action main
        output "hi"
    end
end